fix(DropdownMenu): :bug: Add missing z-index (#1142)

--- a/packages/react/src/components/DropdownMenu/DropdownMenu.module.css
+++ b/packages/react/src/components/DropdownMenu/DropdownMenu.module.css
@@ -1,6 +1,7 @@
 .dropdown {
   position: relative;
   padding: var(--fds-spacing-2);
+  z-index: 1500;
 }
 
 .dropdown.small {
